src/test/deca/context/valid/created/declClass/decl_class.deca
// Description :
// simple declaration for 2 classes, and 2 variables of theses classes
//
// Resultats :
//  everything should be working, nothing will be printed.

class A {

}


class B extends A {

}

{
	A a;
	B b;
}
